k8s/memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos-service
  namespace: memos
spec:
  selector:
    app: memos
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
